--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,27 @@
 <html>
     <head>
         <script src="js/aframe.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="js/webrtc.js"></script>
+        <script src="js/vr-audio-chat.js"></script>
+        <script>
+            window.addEventListener("load", vraudiochat.init);
+        </script>
     </head>
     <body>
         <a-scene>
-            <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-            <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-            <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" sound="src:test.mp3; autoplay:true"></a-cylinder>
-            <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-            <a-sky color="#ECECEC"></a-sky>
+
+            <a-assets>
+                <img id="sky" src="assets/sky.jpg" />
+                <img id="grid" src = "assets/grid.png" />
+            </a-assets>
+
+            <a-entity light="color: ffaaff; intensity: 1.5" position="5 5 5"></a-entity>
+            <a-entity light="color: white; intensity: 0.5" position="-5 5 15"></a-entity>
+            <a-entity light="color: white; type: ambient;"></a-entity>
+            <a-entity geometry="primitive: plane; width: 10000; height: 10000;" rotation="-90 0 0" material="src: #grid; repeat: 10000 10000; transparent: true;metalness:0.6; roughness: 0.4; sphericalEnvMap: #sky;"></a-entity>
+            <a-sky src="#sky" rotation="0 -90 0"></a-sky>
+
         </a-scene>
     </body>
 </html>
